--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,10 @@
         "barryvdh/laravel-dompdf": "^0.8.3",
         "fideloper/proxy": "^4.0",
         "intervention/image": "^2.4",
-        "laravel/framework": "5.6.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.4.0",
+        "tymon/jwt-auth": "1.0.*",
         "yajra/laravel-datatables-oracle": "~8.0"
     },
     "require-dev": {
@@ -37,8 +38,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
